ide-triangle-v1.1.src/test/Pruebas Proyecto III/ArrayErr4.tri
! prueba arreglo sencilla 
! ERROR: tratar de acceder un elemento que no existe

let 
  var x : array 5 of Integer ;
  var i : Integer

in

  x := [10, 20, 30, 40 50] ; 
  putint (x[5]); ! ERROR: los índices van de 0 a 4.  El [5] no está en ese arreglo.
  i := 0 

end